--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,100 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Dealmn</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-<%= yield %>
+  <head>
+    <title>Dealmn</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <div class="header_top">
+      <div class="container">
+        <div class="header_top_stat">
+          <%= t('view.header.top_stat', {listing_total: 10, listing_today: 5}).html_safe %>
+        </div>
+        <div class="header_top_menu">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <%= link_to t('view.header.about_us'), '#' %>
+            </li>
+            <li>
+              <%= link_to t('view.header.terms_of_use'), '#' %>
+            </li>
+            <li class="header_top_menu_last">
+              <%= link_to tag(:span, class: ["glyphicon","glyphicon-question-sign"]), '#', style: "font-size:20px;" %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
-</body>
+    <div class="clearfix"></div>
+
+    <div class="header_mid">
+      <div class="container">
+        <a href="#"><div class="logo"></div></a>
+        <div class="logo-right-category"> </div>
+        
+        <div class="header-banner">
+          <div class="input-group">
+            <div class="input-group-btn">
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Бүгд <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a href="#">Бүгд</a></li>
+                <li><a href="#">Бараа бүтээгдэхүүн</a></li>
+                <li><a href="#">Үл хөдлөх хөрөнгө</a></li>
+                <li><a href="#">Автомашин</a></li>
+                <li><a href="#">Үйлчилгээ</a></li>
+              </ul>
+            </div>
+            <input type="text" class="form-control" placeholder="Search for..." />
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button">Хайх</button>
+            </span>
+          </div>
+        </div>
+        
+        <div class="header-profile">
+          <div class="header-profile-img"><%= image_tag('profile_sample.png')%></div>
+          <div class="header-profile-info">
+            <div class="header-profile-name">        
+              <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  Батбаатар Болдбаатар <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="header-profile-notification">
+              <div class="header-profile-chat"><img src="_includes/img/header-chat-icon.png"/> 1</div>
+              <div class="header-profile-all-deals"><img src="_includes/img/deals-icon.png"/> 5</div>
+            </div>
+          </div>
+        </div>
+      </div>    
+    </div>
+
+    <div class="clearfix"></div>
+
+    <%= yield %>
+
+    <script>
+    $(document).ready(function(){
+      $("#header").sticky({topSpacing:0});
+    });
+
+    $(".dropdown-menu li a").click(function(){
+      var selText = $(this).text();
+      $(this).parents('.input-group-btn').find('button[data-toggle="dropdown"]').html(selText+' <span class="caret"></span>');
+    });
+    </script> 
+
+  </body>
 </html>
