--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -665,14 +665,26 @@ body{
     width: 300px;
     margin-bottom: 15px;
   }
-  .header-side-search .input-group{
-    width: 100%;
+
+  .hover {
+    position:relative;
   }
-  .header-side-search .dropdown-toggle{
-  width:170px;
-  text-align:left;
+
+  .tooltip {
+    top:0px;
+    opacity:0;
+    visibility: hidden;
+    position:absolute;
+    -webkit-transition: all .25s ease;
+       -moz-transition: all .25s ease;
+        -ms-transition: all .25s ease;
+         -o-transition: all .25s ease;
+            transition: all .25s ease;
+
   }
-  .header-side-search .dropdown-toggle .caret{
-  float:right;
-  margin-top:8px;
+
+  .hover:hover .tooltip {
+    top:20px;
+    opacity:1;
+    visibility: visible;
   }
