--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,19 @@
 
     <div class="clearfix"></div>
 
-    <div id="testid" class="header_mid">
+    <div class="header_mid">
       <div class="container">
         <a href="#"><div class="logo"></div></a>
-        <div class="logo-right-category"> </div>
+        <div class="logo-right-category"> 
+          <% unless (controller.controller_name == "home" && controller.action_name == "index") %>
+          <div class='hover'>
+            <a href="#">hello</a>
+            <div class="tooltip" style="width:250px">
+              <%= react_component("CategoryMenu", url: "/rest/categories.json") %>
+            </div>
+          </div>
+          <% end %>
+        </div>
         
         <div class="header-side-search">
           <div class="input-group">
@@ -87,7 +96,7 @@
     <script>
 
     $(window).load(function(){
-      $("#testid").sticky({ topSpacing: 0, className: 'header-sticked' });
+      $(".header_mid").sticky({ topSpacing: 0, className: 'header-sticked' });
     });
 
     $(".dropdown-menu li a").click(function(){
@@ -95,6 +104,7 @@
       $(this).parents('.input-group-btn').find('button[data-toggle="dropdown"]').html(selText+' <span class="caret"></span>');
     });
     </script> 
+
 
   </body>
 </html>
