--- a/app/views/home/page8.html.erb
+++ b/app/views/home/page8.html.erb
@@ -6,11 +6,7 @@
 
             <div class="main-left">
 
-            	<div class="menu-container">
-
-            	<%= react_component("CategoryMenu2", url: "/rest/categories.json", include_header: true) %>
-
-            	</div>
+            	<%= react_component("CategoryMenu", url: "/rest/categories.json", include_header: true) %>
 
            	</div>
 
