--- a/app/views/home/page9.html.erb
+++ b/app/views/home/page9.html.erb
@@ -1,23 +1,17 @@
 <div class="main">
 
-
-	<div class="breadcrumb-container">
-      <div class="container">
-        <ol class="breadcrumb">
-          <li><a href="#">Нүүр</a></li>
-          <li><a href="#">Бараа бүтээгдэхүүн</a></li>
-          <li><a href="#">Цахилгаан бараа</a></li>
-          <li><a href="#">Гар утас</a></li>
-          <li class="active">Apple iPhone 5S GSM Factory Unlocked 16GB</li>
-        </ol>
-      </div>
-    </div>
-
-
     <div class="container">
 
     	<div class="deal-full-detail-page-container">
+
 	    	<div class="deal-full-detail-page">
+
+	    		<div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
+	                <div class="btn btn-primary bid-accept-button"><span class="glyphicon glyphicon-ok" style="margin-right:3px;"></span> Зөвшөөрөх</div>
+	    			<h5>Санал ирсэн тохиролцоо.</h5>
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong>, <strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></p>
+	    		</div>
+
 		        <div class="full-detail-images">
 		          <div class="full-detail-image-slide">
 		            <%= image_tag('1234.jpg')%>
@@ -62,15 +56,6 @@
 		          		</div>
 		          	</div>
 		          	<div class="hairly-line"></div>
-		          	<div class="full-detail-deal-buttons">
-		          		<div class="checkbox btn btn-default">
-	                        <label>
-	                            <input type="checkbox"> Дугуайлах
-	                        </label>
-	                    </div>
-	                    <div class="btn btn-primary" style="margin-top:10px;">Санал илгээх</div>
-	                    <div class="btn btn-success" style="margin-top:10px;">Чатлах</div>
-		          	</div>
 
 		          </div>
 
@@ -161,163 +146,14 @@
 
 		        	</div>
 
-		        	<div class="full-detail-bids">
-
-		        		<strong>Ирсэн саналууд: <br/></strong>
-
-		        		<div class="full-detail-bid-item">
-	      						
-	      					<div class="full-detail-bid-item-detail-img">
-	      						<%= image_tag('galaxyS5.jpg')%>
-	      					</div>
-	      					<div class="full-detail-bid-item-detail">
-	      						<div class="full-detail-bid-item-detail-title"><a href="#">Samsung Galaxy S5 Euro</a></div>
-	      						<div class="full-detail-bid-user"><a href="#">Бадар-Ууган Чагнаадорж</a></div>
-	      						<div class="full-detaul-bid-item-detail-description">
-
-	      							За шууд соливол солий, тулвал тулая. Цоо шинэ хайрцаг савтайгаа Samsung Galaxy S5 Euro байна.
-
-	      						</div>
-
-	      					</div>
-
-		        		</div>
-
-		        		<div class="full-detail-bid-item">
-	      						
-	      					<div class="full-detail-bid-item-detail-img">
-	      						<%= image_tag('galaxyS5.jpg')%>
-	      					</div>
-	      					<div class="full-detail-bid-item-detail">
-	      						<div class="full-detail-bid-item-detail-title"><a href="#">Samsung Galaxy S5 Euro</a></div>
-	      						<div class="full-detail-bid-user"><a href="#">Бадар-Ууган Чагнаадорж</a></div>
-	      						<div class="full-detaul-bid-item-detail-description">
-
-	      							За шууд соливол солий, тулвал тулая. Цоо шинэ хайрцаг савтайгаа Samsung Galaxy S5 Euro байна.
-
-	      						</div>
-
-	      					</div>
-
-		        		</div>
-
-		        		<div class="full-detail-bid-item">
-	      						
-	      					<div class="full-detail-bid-item-detail-img">
-	      						<%= image_tag('galaxyS5.jpg')%>
-	      					</div>
-	      					<div class="full-detail-bid-item-detail">
-	      						<div class="full-detail-bid-item-detail-title"><a href="#">Samsung Galaxy S5 Euro</a></div>
-	      						<div class="full-detail-bid-user"><a href="#">Бадар-Ууган Чагнаадорж</a></div>
-	      						<div class="full-detaul-bid-item-detail-description">
-
-	      							За шууд соливол солий, тулвал тулая. Цоо шинэ хайрцаг савтайгаа Samsung Galaxy S5 Euro байна.
-
-	      						</div>
-
-	      					</div>
-
-		        		</div>
-
-		        		<div class="full-detail-bid-item">
-	      						
-	      					<div class="full-detail-bid-item-detail-img">
-	      						<%= image_tag('galaxyS5.jpg')%>
-	      					</div>
-	      					<div class="full-detail-bid-item-detail">
-	      						<div class="full-detail-bid-item-detail-title"><a href="#">Samsung Galaxy S5 Euro</a></div>
-	      						<div class="full-detail-bid-user"><a href="#">Бадар-Ууган Чагнаадорж</a></div>
-	      						<div class="full-detaul-bid-item-detail-description">
-
-	      							За шууд соливол солий, тулвал тулая. Цоо шинэ хайрцаг савтайгаа Samsung Galaxy S5 Euro байна.
-
-	      						</div>
-
-	      					</div>
-
-		        		</div>
-
-		        		
-
-
-		        	</div>
-
+		        	
 
 
 		        </div>
 		        <div class="clearfix"></div>
 	      	</div>
 
-	      	<div class="deal-full-detail-page similar-items">
-
-	      		<div class="home-module-title">Санал болгох</div>
-
-	      		
-
-	      			<div class="similar-arrow-right"></div><div class="similar-arrow-left"></div>
-
-	      		
-
-	      		<div class="deal-full-similar-items">
-
-	      			<div class="deal-full-similar-item">
-
-	      				<div class="deal-full-similar-item-img"><%= image_tag('galaxyS5.jpg')%></div>
-	      				<div class="deal-full-similar-item-name"><a href="#">Apple iphone 5s fu 32gb</a></div>
-	      				<div class="deal-full-similar-item-user"><a href="#">Энхбаяр Элбэгдорж</a></div>
-	      				<div class="deal-full-similar-item-discription">
-
-	      					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-
-	      				</div>
-
-	      			</div>
-
-	      			<div class="deal-full-similar-item">
-
-	      				<div class="deal-full-similar-item-img"><%= image_tag('1234.jpg')%></div>
-	      				<div class="deal-full-similar-item-name"><a href="#">Apple iphone 5s fu 32gb</a></div>
-	      				<div class="deal-full-similar-item-user"><a href="#">Энхбаяр Элбэгдорж</a></div>
-	      				<div class="deal-full-similar-item-discription">
-
-	      					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-
-	      				</div>
-
-	      			</div>
-
-	      			<div class="deal-full-similar-item">
-
-	      				<div class="deal-full-similar-item-img"><%= image_tag('123.jpg')%></div>
-	      				<div class="deal-full-similar-item-name"><a href="#">Apple iphone 5s fu 32gb</a></div>
-	      				<div class="deal-full-similar-item-user"><a href="#">Энхбаяр Элбэгдорж</a></div>
-	      				<div class="deal-full-similar-item-discription">
-
-	      					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-
-	      				</div>
-
-	      			</div>
-
-	      			<div class="deal-full-similar-item">
-
-	      				<div class="deal-full-similar-item-img"><%= image_tag('iphone.jpg')%></div>
-	      				<div class="deal-full-similar-item-name"><a href="#">Apple iphone 5s fu 32gb</a></div>
-	      				<div class="deal-full-similar-item-user"><a href="#">Энхбаяр Элбэгдорж</a></div>
-	      				<div class="deal-full-similar-item-discription">
-
-	      					Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-
-	      				</div>
-
-	      			</div>
-
-	      		</div>
-
-
-	      		<div class="clearfix"></div>
-
-	      	</div>
+	      	
 
       	</div>
 
