--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,6 +68,7 @@
             <div class="header-profile-notification">
               <div class="header-profile-chat"><%= image_tag('header-chat-icon.png')%> 1</div>
               <div class="header-profile-all-deals"><%= image_tag('deals-icon.png')%> 5</div>
+              <div class="header-profile-all-deals"><%= image_tag('check.png')%> 5</div>
             </div>
           </div>
         </div>
