--- a/app/views/home/page5.html.erb
+++ b/app/views/home/page5.html.erb
@@ -43,10 +43,10 @@
                 <div class="hairly-line"></div>
 
                 <ul class="nav nav-pills nav-stacked">
-                  <li role="presentation"><a href="#">Таны оруулсан тохиролцоо</a></li>
+                  <li role="presentation" class="active"><a href="#">Таны оруулсан тохиролцоо</a></li>
                   <li role="presentation"><a href="#">Захиа<span class="badge">1</span></a></li>
                   <li role="presentation"><a href="#">Ирсэн саналууд<span class="badge">5</span></a></li>
-                  <li role="presentation" class="active"><a href="#">Дугуйлсан тохиролцоо<span class="badge">5</span></a></li>
+                  <li role="presentation"><a href="#">Дугуйлсан тохиролцоо<span class="badge">5</span></a></li>
                 </ul>
 
                 <div class="hairly-line"></div>
@@ -73,9 +73,9 @@
 
             <div class="profile-right">
 
-                <div class="home-module-title big-title">Дугуйлсан тохиролцоо</div>
+                <div class="home-module-title big-title">Таны оруулсан тохиролцоо</div>
 
-                <div class="alert alert-info" role="alert">Дугуйлсан тохиролцоо байхгүй байна.</div>
+                <div class="alert alert-info" role="alert">Тохиролцоо оруулаагүй байна.</div>
 
                 <div class="profile-user-deals">
 
@@ -86,12 +86,67 @@
                     </div>
 
                     <div class="hairly-line"></div>
-                    <a href="#" class="btn btn-primary" role="button">Сонгох</a>
-                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Санал илгээх</a>
+                    <a href="#" class="btn btn-primary" role="button">Онцлох болгох</a>
+                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Засах</a>
                     <a href="#" class="btn btn-danger" role="button"  style="float:right">Устгах</a>
 
                 </div>
-                
+                <div class="profile-user-deals">
+
+                    <div class="profile-user-deals-img"><%= image_tag('1234.jpg')%></div>
+                    <div class="profile-user-deals-name"><a href="#">Iphone 5s FU 32GB Space Gray</a></div>
+                    <div class="profile-user-deals-information">
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    </div>
+
+                    <div class="hairly-line"></div>
+                    <a href="#" class="btn btn-primary" role="button">Онцлох болгох</a>
+                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Засах</a>
+                    <a href="#" class="btn btn-danger" role="button"  style="float:right">Устгах</a>
+
+                </div>
+                <div class="profile-user-deals">
+
+                    <div class="profile-user-deals-img"><%= image_tag('1234.jpg')%></div>
+                    <div class="profile-user-deals-name"><a href="#">Iphone 5s FU 32GB Space Gray</a></div>
+                    <div class="profile-user-deals-information">
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    </div>
+
+                    <div class="hairly-line"></div>
+                    <a href="#" class="btn btn-primary" role="button">Онцлох болгох</a>
+                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Засах</a>
+                    <a href="#" class="btn btn-danger" role="button"  style="float:right">Устгах</a>
+
+                </div>
+                <div class="profile-user-deals">
+
+                    <div class="profile-user-deals-img"><%= image_tag('1234.jpg')%></div>
+                    <div class="profile-user-deals-name"><a href="#">Iphone 5s FU 32GB Space Gray</a></div>
+                    <div class="profile-user-deals-information">
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    </div>
+
+                    <div class="hairly-line"></div>
+                    <a href="#" class="btn btn-primary" role="button">Онцлох болгох</a>
+                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Засах</a>
+                    <a href="#" class="btn btn-danger" role="button"  style="float:right">Устгах</a>
+
+                </div>
+                <div class="profile-user-deals">
+
+                    <div class="profile-user-deals-img"><%= image_tag('1234.jpg')%></div>
+                    <div class="profile-user-deals-name"><a href="#">Iphone 5s FU 32GB Space Gray</a></div>
+                    <div class="profile-user-deals-information">
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    </div>
+
+                    <div class="hairly-line"></div>
+                    <a href="#" class="btn btn-primary" role="button">Онцлох болгох</a>
+                    <a href="#" class="btn btn-success" role="button" style="float:right;margin-left:8px;">Засах</a>
+                    <a href="#" class="btn btn-danger" role="button"  style="float:right">Устгах</a>
+
+                </div>
 
 
 
