--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -628,6 +628,10 @@ body{
     float: left;
     margin-right: 10px;
   }
+  .add-deal-add-pictures .preview img{
+    width: auto;
+    height: auto;
+  }
   .half-width{
     width: 50%;
   }
