--- a/app/views/home/page8.html.erb
+++ b/app/views/home/page8.html.erb
@@ -1,15 +1,1 @@
-<div class="main">
-
-
-    <div class="container">
-
-
-            <div class="main-left">
-
-            	<%= react_component("CategoryMenu", url: "/rest/categories.json", include_header: true) %>
-
-           	</div>
-
-    </div>
-
-</div>
+<%= react_component("TestImageUploader") %>
