image delete button

--- a/app/views/home/page2.html.erb
+++ b/app/views/home/page2.html.erb
@@ -79,7 +79,12 @@
                     <label>Зураг <a href="#">[?]</a></label>
                     <div class="add-deal-add-pictures">
 
-                        <%= image_tag('123.jpg')%>
+                        
+
+                        <div class="added-picture">
+                            <div class="delete-button-img"><span class="glyphicon glyphicon-remove"></span></div>
+                            <%= image_tag('123.jpg')%>
+                        </div>
 
                         <div class="upload-photo">
 
@@ -161,6 +166,27 @@
                 </div>
 
                 <div class="col-md-12"><div class="home-module-title sub-title">Холбоо барих мэдээлэл</div></div>
+                <div class="col-md-12"><div class="title_information">Сүүлд хэрэглэсэн холбоо барих мэдээллийг дахин ашиглах</div></div>
+
+                <div class="col-md-12">
+
+                <div class="prev-contact-info col-md-4">
+                    Утас: 99111199<br/>
+                    Имэйл: mail@mail.com
+                </div>
+                <div class="prev-contact-info col-md-4">
+                    Утас: 99111199<br/>
+                    Имэйл: mail@mail.com
+                </div>
+                <div class="prev-contact-info col-md-4">
+                    Утас: 99111199<br/>
+                    Имэйл: mail@mail.com
+                </div><div class="prev-contact-info col-md-4">
+                    Утас: 99111199<br/>
+                    Имэйл: mail@mail.com
+                </div>
+
+                </div>
 
                 <div class="form-group col-md-12">
                     <label>Холбоо барих утас <a href="#">[?]</a></label>
@@ -190,7 +216,6 @@
                 <button class="botTeal" id="botSimple3">Simple 3</button>
                 
 
-
         </div>
 
 
@@ -212,6 +237,78 @@
 
 
     <div class="main-right">
+
+        <div class="home-free-items">
+
+            <div class="home-module-title">Саналууд</div>
+
+
+            <div class="title_information"><span class="glyphicon glyphicon-info-sign"></span> &nbspБусдад санал болгосон бараа, үйлчилгээний 
+                <br/> &nbsp&nbsp&nbsp&nbsp&nbsp&nbspмэдээллээ тохиролцоонд ашиглах</div>
+            <div class="right-deal-item">
+
+                <div class="right-deal-item-img">
+
+                    <%= image_tag('123.jpg')%>
+
+                </div>
+
+                <div class="title-1">Iphone 6 space grey</div>
+                <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
+
+                <div class="clearfix"></div>
+
+            </div>
+
+            <div class="right-deal-item">
+
+                <div class="right-deal-item-img">
+
+                    <%= image_tag('123.jpg')%>
+
+                </div>
+
+                <div class="title-1">Iphone 6 space grey</div>
+                <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
+
+                <div class="clearfix"></div>
+
+            </div>
+
+            <div class="right-deal-item">
+
+                <div class="right-deal-item-img">
+
+                    <%= image_tag('123.jpg')%>
+
+                </div>
+
+                <div class="title-1">Iphone 6 space grey</div>
+                <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
+
+                <div class="clearfix"></div>
+
+            </div>
+
+            <div class="right-deal-item">
+
+                <div class="right-deal-item-img">
+
+                    <%= image_tag('123.jpg')%>
+
+                </div>
+
+                <div class="title-1">Iphone 6 space grey</div>
+                <div class="info-1">Хэрэгтэй нэгэнд нь хэрэг болох биз үнэгүй ирээд аваарай.</div>
+
+                <div class="clearfix"></div>
+
+            </div>
+
+            
+
+
+        </div>
 
 
         <div class="home-free-items">
@@ -314,8 +411,6 @@
 
 
     </div>
-
-    <div class="alert alert-success add-page-success" role="alert">Амжилтай хадгалагдлаа арьсан боовоо</div>
 
     <div class="footer">
 
