--- a/app/assets/javascripts/components/listing_new_page.js.jsx.erb
+++ b/app/assets/javascripts/components/listing_new_page.js.jsx.erb
@@ -68,7 +68,9 @@ var ListingNewPage = React.createClass({
     console.log(message);
   },
   _handleSave: function () {
-    console.log('aaaa2');
+
+    $(this.refs.saveButton).button('loading');
+    
     var data = {};
     data["title"] = this.state.title;
     data["text_description"] = this.state.text_description;
@@ -86,10 +88,18 @@ var ListingNewPage = React.createClass({
       dataType: 'json',
       data: data,
       success: function (listing) {
+        $.growl.notice({ title: '', message: "Хадгалагдлаа" , location: "br", delayOnHover: true});
+  
         console.log('UPDATED');
+        //$(this.refs.saveButton).button('reset');
       }.bind(this),
       error: function (xhr, status, err) {
         console.error('/rest/listings', status, err.toString());
+        //$(this.refs.saveButton).button('reset');
+      }.bind(this),
+      complete: function () {
+        $(this.refs.saveButton).button('reset');
+        window.scrollTo(0,0);
       }.bind(this)
     });
 
@@ -183,7 +193,7 @@ var ListingNewPage = React.createClass({
         </div>
         <div className="hairly-line"></div>
         <div className="col-md-12 text-center">
-          <button type="button" onClick={this._handleSave} className="btn btn-success">Хадгалах</button>&nbsp;
+          <button ref="saveButton" data-loading-text="Loading..." type="button" onClick={this._handleSave} className="btn btn-success">Хадгалах</button>&nbsp;
           <button type="button" onClick={this._handleSubmit} className="btn btn-success">Нэмэх</button>
         </div>
       </div>
