--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,6 @@
  *= require_self
  *= require bootstrap.min
  *= require jquery.Jcrop.min
- *= require MetroNotificationStyle
+ *= require growl
  *= require_tree .
  */
